--- a/config.json
+++ b/config.json
@@ -1,5 +1,277 @@
 {
   "cache_time": 7200,
   "api_site": {
+    "dyttzy": {
+      "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
+      "name": "电影天堂资源",
+      "detail": "http://caiji.dyttzyapi.com"
+    },
+    "heimuer": {
+      "api": "https://json.heimuer.xyz/api.php/provide/vod",
+      "name": "黑木耳",
+      "detail": "https://heimuer.tv"
+    },
+    "ruyi": {
+      "api": "http://cj.rycjapi.com/api.php/provide/vod",
+      "name": "如意资源"
+    },
+    "bfzy": {
+      "api": "https://bfzyapi.com/api.php/provide/vod",
+      "name": "暴风资源"
+    },
+    "tyyszy": {
+      "api": "https://tyyszy.com/api.php/provide/vod",
+      "name": "天涯资源"
+    },
+    "ffzy": {
+      "api": "http://ffzy5.tv/api.php/provide/vod",
+      "name": "非凡影视",
+      "detail": "http://ffzy5.tv"
+    },
+    "zy360": {
+      "api": "https://360zy.com/api.php/provide/vod",
+      "name": "360资源"
+    },
+    "maotaizy": {
+      "api": "https://caiji.maotaizy.cc/api.php/provide/vod",
+      "name": "茅台资源"
+    },
+    "wolong": {
+      "api": "https://wolongzyw.com/api.php/provide/vod",
+      "name": "卧龙资源"
+    },
+    "jisu": {
+      "api": "https://jszyapi.com/api.php/provide/vod",
+      "name": "极速资源",
+      "detail": "https://jszyapi.com"
+    },
+    "dbzy": {
+      "api": "https://dbzy.tv/api.php/provide/vod",
+      "name": "豆瓣资源"
+    },
+    "mozhua": {
+      "api": "https://mozhuazy.com/api.php/provide/vod",
+      "name": "魔爪资源"
+    },
+    "mdzy": {
+      "api": "https://www.mdzyapi.com/api.php/provide/vod",
+      "name": "魔都资源"
+    },
+    "zuid": {
+      "api": "https://api.zuidapi.com/api.php/provide/vod",
+      "name": "最大资源"
+    },
+    "yinghua": {
+      "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
+      "name": "樱花资源"
+    },
+    "wujin": {
+      "api": "https://api.wujinapi.me/api.php/provide/vod",
+      "name": "无尽资源"
+    },
+    "wwzy": {
+      "api": "https://wwzy.tv/api.php/provide/vod",
+      "name": "旺旺短剧"
+    },
+    "ikun": {
+      "api": "https://ikunzyapi.com/api.php/provide/vod",
+      "name": "iKun资源"
+    },
+    "lzi": {
+      "api": "https://cj.lziapi.com/api.php/provide/vod",
+      "name": "量子资源站"
+    },
+    "xiaomaomi": {
+      "api": "https://zy.xmm.hk/api.php/provide/vod",
+      "name": "小猫咪资源"
+    },
+    "hhzyapi": {
+        "api": "https://hhzyapi.com/api.php/provide/vod",
+        "name": "火狐资源"
+    },
+    "wolongzyw": {
+        "api": "https://collect.wolongzyw.com/api.php/provide/vod",
+        "name": "卧龙资源"
+    },
+    "lziapi": {
+        "api": "http://cj.lziapi.com/api.php/provide/vod",
+        "name": "量子资源"
+    },
+    "xinlangapi": {
+        "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod",
+        "name": "新浪资源"
+    },
+    "apibdzy": {
+        "api": "https://api.apibdzy.com/api.php/provide/vod",
+        "name": "百度云资源"
+    },
+    "taopianapi": {
+        "api": "https://taopianapi.com/cjapi/mc10/vod/json.html",
+        "name": "淘片资源采集网"
+    },
+    "sdzyapi": {
+        "api": "https://sdzyapi.com/api.php/provide/vod",
+        "name": "闪电资源网"
+    },
+    "yparse": {
+        "api": "https://api.yparse.com/api/json",
+        "name": "步步高资源"
+    },
+    "ckzy": {
+        "api": "https://ckzy.me/api.php/provide/vod/at/json",
+        "name": "CK资源"
+    },
+    "tiankongapi": {
+        "api": "https://api.guangsuapi.com/api.php/provide/vod",
+        "name": "光速资源"
+    },
+    "jyzyapi": {
+        "api": "https://jyzyapi.com/provide/vod/from/jinyingm3u8/at/json",
+        "name": "金鹰资源"
+    },
+    "feisuzy": {
+        "api": "https://www.feisuzy.com/api.php/provide/vod",
+        "name": "飞速资源"
+    },
+    "ffzyapi": {
+        "api": "https://cj.ffzyapi.com/api.php/provide/vod",
+        "name": "非凡资源"
+    },
+    "ikunzyapi": {
+        "api": "https://ikunzyapi.com/api.php/provide/vod",
+        "name": "Ikun资源"
+    },
+    "apiyhzy": {
+        "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
+        "name": "樱花动漫"
+    },
+    "1080zyku": {
+        "api": "https://api.1080zyku.com/inc/apijson.php",
+        "name": "1080资源库"
+    },
+    "ukuapi": {
+        "api": "https://api.ukuapi88.com/api.php/provide/vod",
+        "name": "U酷资源"
+    },
+    "wujinapi": {
+        "api": "https://api.wujinapi.me/api.php/provide/vod",
+        "name": "无尽资源"
+    },
+    "hongniuzy": {
+        "api": "https://www.hongniuzy2.com/api.php/provide/vod",
+        "name": "红牛资源"
+    },
+    "ffzy2": {
+        "api": "http://www.ffzy.tv/api.php/provide/vod",
+        "name": "非凡资源"
+    },
+    "subocaiji": {
+        "api": "https://subocaiji.com/api.php/provide/vod",
+        "name": "速播"
+    },
+    "zuidazy": {
+        "api": "http://zuidazy.me/api.php/provide/vod",
+        "name": "最大资源"
+    },
+    "jszyapi": {
+        "api": "https://jszyapi.com/api.php/provide/vod",
+        "name": "极速"
+    },
+    "suoniapi": {
+        "api": "https://suoniapi.com/api.php/provide/vod/from/snm3u8",
+        "name": "索尼资源"
+    },
+    "moduzy": {
+        "api": "https://www.moduzy.com/api.php/provide/vod",
+        "name": "魔都动漫资源网"
+    },
+    "39kan": {
+        "api": "https://www.394tv.com/api.php/provide/vod",
+        "name": "394TV"
+    },
+    "bfzyapi": {
+        "api": "https://bfzyapi.com/api.php/provide/vod",
+        "name": "暴风资源"
+    },
+    "huyaapi": {
+        "api": "https://www.huyaapi.com/api.php/provide/vod/from/hym3u8",
+        "name": "虎牙资源"
+    },
+    "siwazyw": {
+        "api": "https://siwazyw.tv/api.php/provide/vod",
+        "name": "丝袜资源"
+    },
+    "shayu": {
+        "api": "https://shayuapi.com/api.php/provide/vod",
+        "name": "鲨鱼资源"
+    },
+    "lb": {
+        "api": "https://lbapi9.com/api.php/provide/vod",
+        "name": "乐播"
+    },
+    "lajiao": {
+        "api": "http://api.11bat.com/api.php/provide/vod",
+        "name": "辣椒资源"
+    },
+    "lajiao2": {
+        "api": "https://apilj.com/api.php/provide/vod",
+        "name": "辣椒资源2"
+    },
+    "91madou": {
+        "api": "https://91md.me/api.php/provide/vod",
+        "name": "91麻豆"
+    },
+    "aosikazy": {
+        "api": "https://aosikazy.com/api.php/provide/vod",
+        "name": "奥斯卡"
+    },
+    "naixxzy": {
+        "api": "https://naixxzy.com/api.php/provide/vod",
+        "name": "奶香资源"
+    },
+    "semao": {
+        "api": "https://caiji.semaozy.net/inc/apijson_vod.php",
+        "name": "色猫"
+    },
+    "155zy": {
+        "api": "https://155api.com/api.php/provide/vod",
+        "name": "155"
+    },
+    "senlinzy": {
+        "api": "https://slapibf.com/api.php/provide/vod",
+        "name": "森林"
+    },
+    "yutu": {
+        "api": "https://apiyutu.com/api.php/provide/vod",
+        "name": "玉兔"
+    },
+    "fhapi": {
+        "api": "http://fhapi9.com/api.php/provide/vod",
+        "name": "番号资源"
+    },
+    "msnii": {
+        "api": "https://www.msnii.com/api/json.php",
+        "name": "美少女"
+    },
+    "xrbsp": {
+        "api": "https://www.xrbsp.com/api/api.php",
+        "name": "淫水机"
+    },
+    "gdlsp": {
+        "api": "https://www.gdlsp.com/api/api.php",
+        "name": "香奶儿"
+    },
+    "kxgav": {
+        "api": "https://www.kxgav.com/api/api.php",
+        "name": "白嫖"
+    },
+    "pgxdy": {
+        "api": "https://www.pgxdy.com/api/api.php",
+        "name": "黄AV"
+    },
+    "ddapi": {
+        "api": "https://api.ddapi.cc/api.php/provide/vod",
+        "name": "滴滴资源"
+    }
   }
 }
